// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Descriptions demos > demo: Basic 1`] = `
"<div class="ant-descriptions">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">UserName</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Zhou Maomao</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Telephone</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">1810000000</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Live</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Hangzhou, Zhejiang</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Remark</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">empty</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Address</th>
          <td class="ant-descriptions-item-content" colspan="3">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: Bordered 1`] = `
"<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Product</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Cloud Database</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Billing Mode</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Prepaid</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Automatic Renewal</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">YES</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Order time</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">2018-04-24 18:00:00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Usage Time</th>
          <td class="ant-descriptions-item-content" colspan="3">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> 2019-04-24 18:00:00 </span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Status</th>
          <td class="ant-descriptions-item-content" colspan="5">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Running</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Negotiated Amount</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$80.00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Discount</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$20.00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Official Receipts</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$60.00</span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: Responsive 1`] = `
"<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">Responsive Descriptions</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Product</th>
          <td class="ant-descriptions-item-content" colspan="NaN">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Cloud Database</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Billing</th>
          <td class="ant-descriptions-item-content" colspan="NaN">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Prepaid</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Time</th>
          <td class="ant-descriptions-item-content" colspan="NaN">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">18:00:00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Amount</th>
          <td class="ant-descriptions-item-content" colspan="NaN">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$80.00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Discount</th>
          <td class="ant-descriptions-item-content" colspan="NaN">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$20.00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Official</th>
          <td class="ant-descriptions-item-content" colspan="NaN">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$60.00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Config Info</th>
          <td class="ant-descriptions-item-content" colspan="NaN">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: Size 1`] = `
"<div>
  <div class="ant-radio-group ant-radio-group-default ant-radio-group-outline" role="radiogroup"><label class="ant-radio-wrapper ant-radio-wrapper-checked"><span class="ant-radio ant-radio-checked"><input type="radio" class="ant-radio-input" checked="" role="radio" aria-checked="true"><span class="ant-radio-inner"></span></span><span class="ant-radio-label">default</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" role="radio" aria-checked="false"><span class="ant-radio-inner"></span></span><span class="ant-radio-label">middle</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" role="radio" aria-checked="false"><span class="ant-radio-inner"></span></span><span class="ant-radio-label">small</span></label></div><br><br>
  <div class="ant-descriptions ant-descriptions-bordered">
    <div class="ant-descriptions-header">
      <div class="ant-descriptions-title">Custom Size</div>
      <div class="ant-descriptions-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
          <!--v-if-->
          <!--v-if--><span class="ant-btn-content">Edit</span>
        </button></div>
    </div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Product</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Cloud Database</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Billing</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Prepaid</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Time</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">18:00:00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Amount</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$80.00</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Discount</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$20.00</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Official</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$60.00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Config Info</th>
            <td class="ant-descriptions-item-content" colspan="5">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div><br><br>
  <div class="ant-descriptions">
    <div class="ant-descriptions-header">
      <div class="ant-descriptions-title">Custom Size</div>
      <div class="ant-descriptions-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
          <!--v-if-->
          <!--v-if--><span class="ant-btn-content">Edit</span>
        </button></div>
    </div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Product</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Cloud Database</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Billing</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Prepaid</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Time</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">18:00:00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Amount</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$80.00</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Discount</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$20.00</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Official</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$60.00</span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: Vertical 1`] = `
"<div class="ant-descriptions">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <!-- Vertical layout: label row then content row -->
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">UserName</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Telephone</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Live</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Zhou Maomao</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">1810000000</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Hangzhou, Zhejiang</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="2">Address</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Remark</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="2">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">empty</span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: VerticalBorder 1`] = `
"<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <!-- Vertical layout: label row then content row -->
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Product</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Billing Mode</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Automatic Renewal</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Cloud Database</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Prepaid</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">YES</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Order time</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="2">Usage Time</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">2018-04-24 18:00:00</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="2">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">2019-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="3">Status</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="3">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"><!-- Status badge or color badge (no children, dot + text) --><span class="ant-badge ant-badge-status ant-badge-not-a-wrapper"><span class="ant-badge-status-dot ant-badge-status-processing"></span><span class="ant-badge-status-text">Running</span></span></span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Negotiated Amount</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Discount</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Official Receipts</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$80.00</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$20.00</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$60.00</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="3">Config Info</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="3">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
